# dashy

./: Cargo.toml  README.md
client/: package-lock.json  package.json  svelte.config.js  vite.config.js
client/src/: app.css
client/src/lib/: index.js  shared.svelte.js  utils.js
client/src/lib/components/: Header.svelte  Sidebar.svelte
client/src/routes/: +error.svelte  +layout.svelte  +page.svelte
client/src/routes/(protected)/: +layout.server.js  +layout.svelte
client/src/routes/login/: +page.svelte
client/src/routes/register/: +page.svelte
server/: Cargo.toml
server/migrations/: 001_init.sql
server/src/: lib.rs  main.rs
server/src/binance/: mod.rs
server/src/database/: mod.rs
