[package]
name = "example-cors"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
tower = { version = "0.5.3", features = ["util"] }
