[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json"] }
dotenvy = "0.15"
tower = { version = "0.5.3", features = ["util"] }
http = "1.4.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"]}
uuid = { version = "1.21.0", features = ["v4", "serde"]}
argon2 = "0.5.3"
jsonwebtoken = "10.3.0"
chrono = "0.4.43"
time = "0.3.47"
tower-cookies = "0.11.0"
colog = "1.4.0"
log = "0.4.29"
